--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,23 @@ body {
   background-color: rgb(236, 236, 236);
 }
 
+button {
+  padding: 8px 16px;
+  background: #0064ff;
+  color: white;
+  font-weight: bold;
+  border-radius: 8px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  border: 0;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+}
+
 .card {
   background: white;
   padding: 10px;
