--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,8 @@
 
 <app-if-render></app-if-render>
 
+<app-event-handler></app-event-handler>
+
+<app-list-render></app-list-render>
+
 <router-outlet></router-outlet>
