--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,11 @@
-<div class="card">
-  <h1>Hello World!</h1>
-</div>
+<header>header!</header>
 
-<app-first-tag></app-first-tag>
-
-<app-parent-data [data]="userData"></app-parent-data>
-
-<app-first-directives></app-first-directives>
-
-<app-if-render></app-if-render>
-
-<app-event-handler></app-event-handler>
-
-<app-list-render></app-list-render>
-
-<app-pipe-operators></app-pipe-operators>
-
-<app-two-way-binding></app-two-way-binding>
+<nav>
+  <a routerLink="/">Home</a>
+  <a routerLink="/animals">Animals</a>
+  <a routerLink="/exercises">Exercises</a>
+</nav>
 
 <router-outlet></router-outlet>
+
+<footer>footer!</footer>
